--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -6,3 +6,7 @@
     <input [(ngModel)]="hero.name" placeholder="name">
   </div>
 </div>
+<div>
+    <button (click)="goBack()">Back</button>
+    <button (click)="save()">Save</button>
+</div>
